<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Need A Ride App</string>
    <string name="app_facebook_id_tom">1424257617813779</string>
    <string name="app_facebook_id">587415981346858</string>
    
    <string name="wait_while_logging_in">Please Wait While Trying To LogIn Through Facebook</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="TaxiOrPrivateDialogHeader">Private Or Taxi?</string>
    <string name="offerRideTVText">offer a ride</string>
    <string name="offerRideIMGBTdesc">offer a ride button</string>
    <string name="takeARideIMGBTdesc">take a ride button</string>
    <string name="Favorites">Favorites</string>
    <string name="Map">map</string>
    <string name="title_activity_hitchhiker_planner">Hitchhiker Planner</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="numberPickerDialogHeader">choose a number</string>
    <string name="title_activity_driver_planner">Private Car Driver Planner</string>

    <item name="maxNumOfSits" type="integer">9</item>
    <item name="secsTillAutoComplete" type="integer">2</item>
    <item name="secsForUpdateTextWhileTyping" type="integer">4</item>
    <item name="secsForUpdateMarkerOnMap" type="integer">3</item>

    <string name="from">From:</string>
    <string name="title_activity_no_similar_rides">No Similar Rides</string>
    <string name="title_activity_splash_screen">Need A Ride</string>
    <string name="title_activity_map">Map</string>
    <string name="google_maps_api_key_old">AIzaSyCWLlAWum60ezNcNZhx1zOly9eYba5SVVo</string>
    <string name="google_maps_api_key">AIzaSyAkkkrcKkenWxOrHrvEgOtybY3YV-uH2L8</string>
    <string name="google_places_server_key2">AIzaSyAG4XcaQSWGTL7ML_HhFkZmKH0y1MVm9-w</string>
    <string name="google_places_server_key">AIzaSyCSq2Ey6JGph4OCO8vve4Gj63i9heXnI6E</string>
    <string name="title_activity_profile_details">Change Profile Details</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_hitchhiker_ride_result">Hitchhiker Ride Results</string>
    <string name="title_activity_map_fragment">MapFragment</string>
    <string name="title_activity_ride_details_fragment">RideDetailsFragment</string>
    <string name="title_activity_ride_chooser_fragment">RideChooserFragment</string>
    <string name="taxi_toggle_turn_on">Taxi</string>
    <string name="taxi_toggle_turn_off">Taxi</string>
    <string name="look_for_ride_toggle_turn_on">Looking for ride</string>
    <string name="look_for_ride_toggle_turn_off">Look for ride</string>
    <string name="add_new_ride_toggle_turn_on">Im The Driver</string>
    <string name="add_new_ride_toggle_turn_off">Add new ride</string>
    <string name="title_activity_take_aride">TakeARideActivity</string>
    <string name="title_activity_choose_ride_result">ChooseRideResultActivity</string>
    <string name="title_activity_hitchhicker_results">HitchhickerResultsActivity</string>
    <string name="title_activity_driver_add_ride_details">DriverAddRideDetailsActivity</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
